--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ black = "^22.1.0"
 isort = "^5.10.1"
 pytest = "^7.1.1"
 mypy = "^0.941"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
