--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = []
 packages = [
-    { include = "pelisplay-series", from = "src" }
+    { include = "pelisplay_series", from = "src" }
 ]
 
 [tool.poetry.dependencies]
@@ -39,3 +39,6 @@ exclude = '''
 
 [tool.isort]
 profile = "black"
+
+[tool.mypy]
+ignore_missing_imports = true
